# VSL-Core

./: README.md  RELEASE_CHECKLIST.md  pyproject.toml
docs/: building-with-vsl-core.md  governance-frameworks.md  vsl-core-primitives.json
src/vsl_core/: __init__.py  cluster.py  constructs.py  exceptions.py  governance.py  identity.py  ledger.py  metrics.py
src/vsl_core/catalog/: __init__.py  drift_classes.json  legion_patterns.json  loader.py
src/vsl_core/conformance/: __init__.py  protocol.py  reference_adapter.py  suite.py
tests/: test_catalog.py  test_cluster.py  test_conformance.py  test_constructs.py  test_exceptions.py  test_governance.py  test_identity.py  test_ledger.py  test_metrics.py
